test/valid/TestesPoint/Point.plume
/**
 * Classe que representa um ponto.
 *
 * @author 37060, Roberto Silva
 */
class Point extends Object is
	
	field x : Integer
	field y : Integer
	
	method equals : (p : Point) -> Boolean is
    	if this.x==p.x 
    	then if this.y==p.y
    		then true
    		else false
    	else false
	
	method translate : (dx : Integer, dy : Integer) -> Point is
    	new Point(x + dx, x + dy)
	
	method override toString : () -> String is
    	"(" + x.toString() + "," + y.toString() + ")"